Fixed alignment

--- a/assets/menu.css
+++ b/assets/menu.css
@@ -3,10 +3,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
   overflow: hidden;
   z-index: 2;
-  height: 70px;
+  height: 60px;
 }
 
 .tmw-header-menu-inner-container {
